# rustc_apfloat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-DETAILS.md  README.md  build.rs  ieee.rs  lib.rs  ppc.rs  rustfmt.toml
.github/workflows/: main.yaml  main.yml  publish.yml
benches/: decimal.rs
etc/: download-llvm.sh  fuzz-parallel.sh
fuzz/: Cargo.toml  build.rs  ops.rs  rustfmt.toml
fuzz/src/: apf_fuzz.cpp  apf_fuzz.rs  host.rs  main.rs
src/: downstream.rs  ieee.rs  lib.rs  ppc.rs
tests/: downstream.rs  ieee.rs  ppc.rs
