[workspace]
members = ["fuzz"]

[workspace.package]
version = "0.0.7+llvm-f45d5e71d3e1"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[package]
name = "rustc_apfloat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitflags = "1.3.2"
smallvec = { version = "1.11.0", features = ["const_generics", "union"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "decimal"
harness = false
