[workspace]
members = ["fuzz"]

[workspace.package]
version = "0.2.1+llvm-e60b91df1357"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[package]
name = "rustc_apfloat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/rust-lang/rustc_apfloat"
description = "Rust port of C++ llvm::APFloat library"

[dependencies]
bitflags = "1.3.2"
smallvec = { version = "1.11.0", features = ["const_generics", "union"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "decimal"
harness = false
