[workspace]
members = ["fuzz"]

[workspace.package]
version = "0.2.4+llvm-038f7debfda0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[package]
name = "rustc_apfloat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/rust-lang/rustc_apfloat"
description = "Rust port of C++ llvm::APFloat library"
rust-version = "1.65.0"
exclude = [".github/"]

[dependencies]
bitflags = "2.6.0"
smallvec = { version = "1.11.0", features = ["const_generics", "union"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

# Speed up some things like decoding and corpus generation
[profile.dev.package.rustc_apfloat-fuzz]
opt-level = 1

[[bench]]
name = "decimal"
harness = false
